--- a/Moon_Shelf/shop/templates/shop/main_template.html
+++ b/Moon_Shelf/shop/templates/shop/main_template.html
@@ -1,14 +1,38 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>{% block title %}{% endblock %}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Moon Shelf - Книжный интернет-магазин{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'shop/css/main.css' %}">  <!-- Подключаем main.css -->
 </head>
 <body>
-   {% block content %}
+    <header>
+        <h2>Moon Shelf</h2>
+    </header>
 
+    <nav>
+        <a href="/">Главная</a>
+        <a href="/catalog/">Каталог</a>
+        <a href="/recommendations/">Рекомендации</a>
+        <a href="/cart/">Корзина</a>
+        <a href="/profile/">Профиль</a>
+    </nav>
 
-   {% endblock %}
+    <main>
+        <div class="search-bar">
+          <form action="/search/" method="get">
+            <input type="text" name="q" placeholder="Поиск книги...">
+            <button type="submit">Найти</button>
+          </form>
+        </div>
+        {% block content %}
+        {% endblock %}
+    </main>
+
+    <footer>
+        &copy; 2025 Moon Shelf. Все права защищены.
+    </footer>
 </body>
 </html>
