--- a/Moon_Shelf/shop/templates/shop/main_template.html
+++ b/Moon_Shelf/shop/templates/shop/main_template.html
@@ -5,11 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Moon Shelf - Книжный интернет-магазин{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'shop/css/main.css' %}">  <!-- Подключаем main.css -->
+    <link rel="stylesheet" href="{% static 'shop/css/main.css' %}">  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="SHA512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
-        <h2>Moon Shelf</h2>
+        <div class="header-top">
+            <h1>Moon Shelf</h1>
+
+            <div class="icon-container">
+                <span class = "fas fa-user-circle"></span>  <!-- личный кабинет -->
+                <span class = "far fa-heart"></span> <!-- Список желаний  -->
+                <span class = "fas fa-archive"></span> <!-- История покупок  -->
+                <span class = "fas fa-shopping-basket"></span> <!-- Корзина  -->
+            </div>
+        </div>
+        <div class="search-bar">
+            <form action="/search/" method="get">
+              <input type="text" name="q" placeholder="Поиск книги...">
+              <button type="submit">Найти</button>
+            </form>
+        </div>
+
     </header>
 
     <nav>
@@ -21,12 +38,7 @@
     </nav>
 
     <main>
-        <div class="search-bar">
-          <form action="/search/" method="get">
-            <input type="text" name="q" placeholder="Поиск книги...">
-            <button type="submit">Найти</button>
-          </form>
-        </div>
+        
         {% block content %}
         {% endblock %}
     </main>
@@ -36,3 +48,4 @@
     </footer>
 </body>
 </html>
+
