сделал crub и реализовал бизнес-логику необходимую для панели администратора

--- a/Moon_Shelf/shop/templates/shop/main_template.html
+++ b/Moon_Shelf/shop/templates/shop/main_template.html
@@ -30,10 +30,9 @@
     </header>
 
     <nav>
-        <a href="/">Главная</a>
-        <a href="/catalog/">Каталог</a>
-        <a href="/recommendations/">Рекомендации</a>
-        <a href="/cart/">Корзина</a>
+        <a href="">Каталог</a>
+        <a href="/stock/">Акции</a>
+        <a href="/basket/">Корзина</a>
         <a href="/profile/">Профиль</a>
     </nav>
 
