--- a/Moon_Shelf/shop/templates/shop/main_template.html
+++ b/Moon_Shelf/shop/templates/shop/main_template.html
@@ -13,7 +13,9 @@
         <header>
             <!-- Левый блок: Заголовок -->
             <div class="header-left">
-                <h1>Moon Shelf</h1>
+                <a href="/">
+                    <h1>Moon Shelf</h1>
+                </a>
             </div>
     
             <!-- Центральный блок: Поисковая строка -->
