--- a/Moon_Shelf/shop/templates/shop/profile.html
+++ b/Moon_Shelf/shop/templates/shop/profile.html
@@ -10,7 +10,9 @@
     <body>
         <header>
             <div class="header-left">
-                <h1>Moon Shelf</h1>
+                <a href="/">
+                    <h1>Moon Shelf</h1>
+                </a>
             </div>
             <div class="header-right">
                 <!-- Форма для выхода с методом POST -->
