--- a/Moon_Shelf/shop/static/shop/css/main.css
+++ b/Moon_Shelf/shop/static/shop/css/main.css
@@ -34,6 +34,11 @@ header {
     flex: 0 0 auto; /* Не растягивается и не сжимается */
 }
 
+.header-left a {
+    text-decoration: none; 
+    color: inherit;        
+  }
+
 .header-left h1 {
     margin: 0;
     font-size: 1.8em;
@@ -315,4 +320,55 @@ button:hover, .logout-button:hover {
 
 .profile-info strong {
     color: #333;
+}
+
+/* Бокавая панель */
+.catalog-container {
+    display: flex;
+}
+
+.sidebar {
+    width: 250px;
+    background-color: #d7abffbb;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.sidebar h3 {
+    text-align: center;
+    color: #fff;
+}
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar ul li {
+    margin: 10px 0;
+}
+
+.sidebar ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    display: block;
+    padding: 8px;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+.sidebar ul li a:hover {
+    background-color: #e989e983;
+}
+
+.books-list {
+    flex: 1;
+    padding: 20px;
+}
+
+.book-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
 }
