--- a/Moon_Shelf/shop/static/shop/css/books.css
+++ b/Moon_Shelf/shop/static/shop/css/books.css
@@ -56,3 +56,35 @@ h2.theme {
 .buy-button:hover {
     background-color: #4a2fd1b0;
 }
+
+#suggestions {
+    position: absolute;
+    background: white;
+    border: 1px solid #ddd;
+    z-index: 1000;
+    display: none;
+    left: 0;
+    top: 100%; /* Под полем ввода */
+    width: calc(100% - 20px); /* Уменьшаем ширину на 20px, чтобы учесть отступы */
+    max-width: calc(700px - 20px); /* Максимальная ширина подсказки */
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 0 12px;
+}
+
+.suggestion-item {
+    padding: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid #ddd;
+    font-size: 1em;
+    color: #333;
+    text-align: left;
+}
+
+.suggestion-item:last-child {
+    border-bottom: none;
+}
+
+.suggestion-item:hover {
+    background-color: #f7f7f7;
+}
